# ERP-System

./: .gitignore  ANDROID_SIGNING_GUIDE.md  Bugs  README.md  capacitor.config.ts.archived  index.html  package-lock.json  package.json  release.py  test-decrypt.mjs  vercel.json  vite.config.ts  vite.config.ts.timestamp-1769303492646-920e3b27b764e8.mjs
api/: egcurrency.js  forexfy.js
docs/: EXCHANGE_RATE_SYSTEM.md  PLAN-asaas-rebrand.md  PLAN-heatmap-localization-and-ui.md  PLAN-multi-session-sync.md  PLAN-sales-count-trend.md  PLAN-trading-time-heatmap.md  (+1 more)
electron/: main.cjs  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.wwebjs_cache/: 2.3000.1032432033.html  2.3000.1032432911.html
src-tauri/auth_info_baileys/: app-state-sync-key-AAAAAEh+.json  creds.json  lid-mapping-45840638971991_reverse.json  lid-mapping-9647701990012.json  pre-key-1.json  pre-key-10.json  pre-key-100.json  pre-key-101.json  pre-key-102.json  pre-key-103.json  pre-key-104.json  pre-key-105.json  pre-key-106.json  pre-key-107.json  pre-key-108.json  pre-key-109.json  pre-key-11.json  pre-key-110.json  pre-key-111.json  pre-key-112.json  pre-key-113.json  pre-key-114.json  pre-key-115.json  pre-key-116.json  pre-key-117.json  pre-key-118.json  pre-key-119.json  pre-key-12.json  pre-key-120.json  pre-key-121.json  pre-key-122.json  pre-key-123.json  pre-key-124.json  pre-key-125.json  pre-key-126.json  pre-key-127.json  pre-key-128.json  pre-key-129.json  pre-key-13.json  pre-key-130.json  (+782 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+106 files in other folders)
